# iskwet

./: Cargo.toml
example/: dict.json
src/: main.rs
