[package]
name = "iskwet"
version = "0.1.0"
authors = ["samwalls", "WulfricC"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4"
rocket_contrib = { version = "0.4", features = ["uuid"] }
serde = { version = "0.9", features = ["derive"] }
