[package]
name = "iskwet"
version = "0.1.0"
authors = ["samwalls", "WulfricC"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.110", features = ["derive"] }
serde_json = "1.0.53"
clap = "3.0.0-beta.1"
rocket = "0.4"
rocket_contrib = { version = "0.4", features = ["uuid"] }
